[tool.poetry]
name = "fastapi-auth"
version = "0.1.0"
description = ""
authors = ["fatiudeen <shehufatiudeen@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]                                                           
dev = "scripts:start"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.82.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
SQLAlchemy = "^1.4.41"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
